--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "bizhacks",
+  "name": "comic",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
-
-
   "dependencies": {
     "async": "^1.5.2",
     "bcrypt": "^0.8.5",
@@ -24,8 +22,19 @@
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "node-uuid": "^1.4.7",
+    "nodemailer": "^0.7.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "debug": "^2.2.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-ts": "^5.3.2",
+    "mocha": "^2.4.5",
+    "superagent": "^1.7.2",
+    "supertest": "^1.1.0"
   }
 }
