--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.14.2",
     "cookie-parser": "~1.3.5",
     "debug": "^2.2.0",
+    "debug-log": "^1.0.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "jwt-simple": "^0.4.1",
@@ -28,6 +29,10 @@
     "require": "^2.4.20",
     "serve-favicon": "~2.3.0"
   },
+  "engines": {
+    "node": "4.2.4"
+  },
+
   "devDependencies": {
     "chai": "^3.5.0",
     "debug": "^2.2.0",
